deploy/kustomize/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-shui
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: k-shui
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
